	PR debug/77773 	* c-pretty-print.c (simple_type_specifier): Do not dereference `t' 	if NULL.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-6-branch@241657 138bc75d-0d04-0410-961f-82ee72b054a4